# tania

./: .env.example  .gitignore  Makefile  README.md  deploy.sh  docker-compose.override.yml.example  docker-compose.yml  update.sh
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_local_auth.py
backend/scripts/: seed_admin.py
backend/src/: config.py  main.py
backend/src/api/: dependencies.py
backend/src/api/v1/: admin.py  agents.py  auth.py  chat.py  departments.py  documents.py  me.py
backend/src/core/auth/: __init__.py  crypto.py  jwt_service.py  ldap_client.py
backend/src/core/llm/: litellm_client.py
backend/src/core/rag/: chunker.py  embedder.py  parsers.py  qdrant_store.py  vector_store.py
backend/src/core/storage/: minio_client.py
backend/src/db/: session.py
backend/src/models/: __init__.py  agent.py  agent_prompt_history.py  audit_log.py  conversation.py  db_connection.py  department.py  document.py  document_chunk.py  llm_config.py  schedule.py  user.py
backend/src/schemas/: agent.py  department.py  document.py  llm_config.py
backend/src/workers/: celery_app.py  document_tasks.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/admin/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/admin/agents/: page.tsx
frontend/src/app/(dashboard)/admin/departments/: page.tsx
frontend/src/app/(dashboard)/admin/documents/: page.tsx
frontend/src/app/(dashboard)/admin/llm/: page.tsx
frontend/src/app/(dashboard)/chat/[agentId]/: page.tsx
frontend/src/components/: app-header.tsx  app-sidebar.tsx
frontend/src/lib/: api.ts  auth.ts
litellm-proxy/: config.yaml
nginx/: nginx.conf
scripts/: seed_departments.py
supabase/init/: 00_init.sh  00_init.sql
